# LGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  library.json  project.yml
include/: Allocator.h  Arena.h  BitmapFont.h  BlendFillRect.h  Color.h  Draw.h  Error.h  FillRect.h  Font.h  Image.h  Input.h  PixelFormat.h  Rect.h  Surface.h  Transform.h  Window.h  color.h  draw.h  image.h  surface.h  window.h
include/internal/: FixedPoint.h  Inlines.h
src/: Allocator.c  Arena.c  BitmapFont.c  BlendFillRect.c  Color.c  Draw.c  Error.c  FillRect.c  Font.c  Image.c  PixelFormat.c  Rect.c  Surface.c  Transform.c  color.c  draw.c  image.c  surface.c
src/platform/: PlatformESP32_ST7789.cpp  PlatformLinux.c  PlatformWindows.c  platform_linux.c
test/: test_BitmapFont.c  test_Color.c  test_FillRect.c  test_Image.c  test_PixelFormat.c  test_Surface.c  test_color.c  test_draw.c  test_surface.c
